Colunm name error solved.

--- a/backend/public/applications.html
+++ b/backend/public/applications.html
@@ -89,7 +89,7 @@
                 <td>${app.grade}</td>
                 <td>${app.department}</td>
                 <td>${app.phone}</td>
-                <td>${new Date(app.created_at).toLocaleString()}</td>
+                <td>${new Date(app.submitted_at).toLocaleString()}</td>
                 <td><a class="download-btn" href="${API_URL}/uploads/${app.cv_filename}" download>İndir</a></td>
             `;
                     tbody.appendChild(row);
